# Surface_Water_Analysis-CRB

./: .gitignore  README.md  pyproject.toml  requirements.txt
Codes/: analysis.ipynb  pre-processing.ipynb
Codes/utils/: helper_functions.py
Results/: Figures.ipynb  README.md  generate-figures.ipynb
data/: README.md
data/analysis-data/: huc4_zonal_stats.csv  transitions_urbanization_92_19.csv  water_type_transitions_02_19.csv  water_type_transitions_92_19.csv
data/processed-data/: CRB_PDSI_84-21.csv
data/processed-data/shapefiles/: CRB_HUC4.dbf  CRB_HUC4.shx  CRB_major_rivers.dbf  CRB_major_rivers.shp  CRB_major_rivers.shx  CRB_states.dbf  CRB_states.shp  CRB_states.shx  CRB_urban_cities.dbf  CRB_urban_cities.shp  CRB_urban_cities.shx  Lake_Mead.dbf  Lake_Mead.shp  Lake_Mead.shx  Lake_Powell.dbf  Lake_Powell.shp  Lake_Powell.shx
surface-env/: pyproject.toml
