[tool.poetry]
name = "surface-env"
version = "0.1.0"
description = ""
authors = ["Patricia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
jupyter = "^1.1.1"
geopandas = "^1.0.1"
rasterio = "^1.4.2"
scipy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
