[tool.poetry]
name = "surface-env"
version = "0.1.0"
description = ""
authors = ["Patricia <ppuente@email.arizona.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
